--- a/src/Components/StepsNavigation/StepsNavigation.css
+++ b/src/Components/StepsNavigation/StepsNavigation.css
@@ -35,7 +35,8 @@
     max-width: 32px;
     min-height: 32px;
     max-height: 32px;
-    background-color: #fff;
+    background-color: #fff !important;
+    color: #000 !important;
     border: 2px solid #373737;
     border-radius: 100%;
     color: #000;
