fix styles in Header and StepNavigation -> convert px to rem and fix media query

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,7 +4,7 @@
 .Header__title{
   max-width: 562px;
   color: #cc091d;
-  font-size: 28px;
+  font-size: 1.8rem;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 1.9rem;
 }
