--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,3 +8,25 @@
   font-weight: 700;
   line-height: 1.9rem;
 }
+
+.Header__price{
+    width: 100%;
+    border-bottom: 1px solid #cfcccc;
+    padding-bottom: 0.7rem;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: #353535;
+}
+
+.Header__price-value{
+    color: #cc091d;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.Header__price-note{
+    font-size: 13px;
+    line-height: 15px;
+    color: #353535;
+    margin:10px 0px;
+}
