--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+@media (max-width:767px),(max-device-width:767px) {
+    html{
+        font-size: 14px;
+    }
+}
