add texts and images for steps description ('Step' Component)

--- a/src/Components/Step/Step.css
+++ b/src/Components/Step/Step.css
@@ -3,7 +3,7 @@
     padding: 15px;
     background: #ffffff;
     padding-bottom: 30px;
-    box-shadow 0 0 16px rgba(0, 0, 0, 0.07);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.07);
     border-top: 1px solid #cc091d;
     margin-left: 10px;
     padding-top: 0;
