--- a/src/Components/StepsNavigation/StepsNavigation.css
+++ b/src/Components/StepsNavigation/StepsNavigation.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 35px 10px;
+    margin: 2rem 0.6rem;
     margin-left: 50px;
 }
 
