--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -25,8 +25,8 @@
 }
 
 .Header__price-note{
-    font-size: 13px;
-    line-height: 15px;
+    font-size: 0.75rem;
+    line-height: 1rem;
     color: #353535;
-    margin:10px 0px;
+    margin:0.65rem 0px;
 }
