--- a/src/Components/RadioGroup/RadioGroup.css
+++ b/src/Components/RadioGroup/RadioGroup.css
@@ -3,8 +3,8 @@
 }
 
 .RadioGroup__title{
-    font-size: 14px;
-    padding: 11px 0 0 15px;
+    font-size: 0.85rem;
+    padding: 0.7rem 0 0 1rem;
     font-weight: 500;
     margin-bottom: 8px;
 }
@@ -15,7 +15,7 @@
 }
 
 .RadioGroup__item{
-    margin: 0 10px 0 0;
+    margin: 0 0.7rem 0 0;
 }
 
 .RadioGroup__item-field{
@@ -26,8 +26,8 @@
   display: inline-block;
   user-select: none;
   cursor: pointer;
-  font-size: 17px;
-  padding: 10px 40px;
+  font-size: 1rem;
+  padding: 0.65rem 2.5rem;
   border: 1px solid #b0b0b0;
   transition: 0.4s;
   border-radius: 3px;
@@ -41,8 +41,8 @@
 .RadioGroup__error{
   text-align: left;
   color: #cc091d;
-  font-size: 12px;
-  line-height: 20px;
+  font-size: 0.75rem;
+  line-height: 1.5rem;
   margin-bottom: 7px;
   position: relative;
   z-index: 1;
@@ -51,6 +51,6 @@
 
 @media (max-width:380px),(max-device-width:380px) {
     .RadioGroup__item-label{
-        padding: 10px 20px
+        padding: 0.65rem 1.5rem;
     }
 }
