--- a/src/Components/Step/Step.css
+++ b/src/Components/Step/Step.css
@@ -1,37 +1,37 @@
 .Step{
     max-width: 710px;
-    padding: 15px;
+    padding: 1rem;
     background: #ffffff;
     padding-bottom: 30px;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.07);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.07);
     border-top: 1px solid #cc091d;
     margin-left: 10px;
     padding-top: 0;
-    padding-left: 30px;
+    padding-left: 2rem;
 }
 
 .Step__title{
     background: #cc091d;
-    padding: 6px 0px 6px 18px;
-    margin-top: 15px;
+    padding: 0.4rem 0px 0.4rem 1rem;
+    margin-top: 1rem;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 1.2rem;
     text-transform: uppercase;
-    margin-left: -30px;
-    margin-right: -15px;
-    margin-top: 9px;
+    margin-left: -2rem;
+    margin-right: -1rem;
+    margin-top: 0.6rem;
 }
 
 .Step__description{
     display: flex;
     max-width: 605px;
-    margin: 30px auto 28px 16px;
+    margin: 2rem auto 1.7rem 1rem;
     align-items: flex-start;
 }
 
 .Step__text{
     max-width: 544px;
     color: #353535;
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 0.85rem;
+    line-height: 1.3rem;
 }
