--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,3 +1,9 @@
+.Button-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .Button{
     cursor: pointer;
     white-space: nowrap;
@@ -18,7 +24,7 @@
       font-size: 0.7rem;
       line-height:1.1rem;
       margin-top: 6px;
-      max-width: 230px;
+      text-align: center;
 }
 
 .Button:hover{
@@ -56,10 +62,15 @@
     text-transform: uppercase;
     background-color: transparent;
     border: 1px solid #cc091d;
-    display: block;
     outline: none;
 }
 
 .Button_red-border:hover{
     color: tomato;
+}
+
+@media (max-width:767px),(max-device-width:767px) {
+    .Button-wrapper{
+        margin: 0.25rem auto;
+    }
 }
