--- a/src/Components/Select/Select.css
+++ b/src/Components/Select/Select.css
@@ -22,9 +22,23 @@
 .Select .Input__field{
     padding-bottom: 0px;
     padding-top: 2px;
+    margin-left: -9px;
 }
-
 
 .Input.Select.incorrect .Input__field > *{
     background-color: #fbe3e3 !important;
+}
+
+.Select_country{
+    display: flex !important;
+    flex-direction: column;
+    user-select: none;
+}
+
+.Select_country .selected--flag--option, .Select_country .country-label{
+    font-size: 1.2rem !important;
+}
+
+.Select_country .country-flag > img{
+    top: -2px !important;
 }
