--- a/src/Components/ToggleTab/ToggleTab.css
+++ b/src/Components/ToggleTab/ToggleTab.css
@@ -1,7 +1,7 @@
 .ToggleTab__title{
   max-width: 626px;
   background: #cc091d;
-  padding: .0.65rem;
+  padding: 0.65rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
