--- a/src/Components/Datepicker/Datepicker.css
+++ b/src/Components/Datepicker/Datepicker.css
@@ -6,19 +6,17 @@
 
 .react-date-picker__button{
     max-width: 625px;
-    border: 1px solid rgba(0, 0, 0, .31);
+    width: 100%;
+    margin-bottom: 5px;
+    border: none !important;
     background-color: #fefefe;
     border-radius: 3px;
     position: relative;
     padding: 11px 0 0 15px;
     cursor: pointer;
     background: url(img/input-calendar.png) no-repeat 99% 91%;
-    min-width: 300px;
 }
 
-.react-date-picker__button__icon{
-    display: none;
-}
 
 .react-date-picker__button__icon{
     display: none;
@@ -31,7 +29,7 @@
 .react-date-picker__calendar{
     border: 10px solid #ccc;
     outline: 1px solid #b0b0b0;
-    width: 250px;
+    width: 300px;
     top: 100%;
     bottom: auto;
 }
