--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.App, .App *{
+    font-family: "Open Sans" !important;
+}
+
 .App__container{
     background-color: #f7f7f7;
     padding-bottom: 2rem;
