--- a/src/Components/RadioGroup/RadioGroup.css
+++ b/src/Components/RadioGroup/RadioGroup.css
@@ -3,10 +3,9 @@
 }
 
 .RadioGroup__title{
-    font-size: 0.85rem;
-    padding: 0.7rem 0 0 1rem;
-    font-weight: 500;
-    margin-bottom: 8px;
+    color: #000;
+    font-size: 14px;
+    padding: 0.7rem 0 0 0;
 }
 
 .RadioGroup__wrapper{
@@ -27,7 +26,7 @@
   user-select: none;
   cursor: pointer;
   font-size: 1rem;
-  padding: 0.65rem 2.5rem;
+  padding: 0.45rem 2.25rem;
   border: 1px solid #b0b0b0;
   transition: 0.4s;
   border-radius: 3px;
