--- a/src/Components/RadioGroup/RadioGroup.css
+++ b/src/Components/RadioGroup/RadioGroup.css
@@ -6,6 +6,7 @@
     color: #000;
     font-size: 14px;
     padding: 0.7rem 0 0 0;
+    margin-bottom: 0.5rem;
 }
 
 .RadioGroup__wrapper{
@@ -42,10 +43,8 @@
   color: #cc091d;
   font-size: 0.75rem;
   line-height: 1.5rem;
-  margin-bottom: 7px;
   position: relative;
   z-index: 1;
-  min-height: 22px;
 }
 
 @media (max-width:380px),(max-device-width:380px) {
