--- a/src/Components/Datepicker/Datepicker.css
+++ b/src/Components/Datepicker/Datepicker.css
@@ -221,15 +221,41 @@ td.rdtYear:hover {
 
 /** CUSTOM **/
 .Datepicker .rdtPicker{
-    border: 10px solid #ccc;
+    border: 10px solid #e2e2e2;
     outline: 1px solid #b0b0b0;
     top: 100%;
     bottom: auto;
     padding: 0;
+    width: 297px;
 }
 
 .Datepicker .rdtPicker table{
     border-spacing: 0;
+}
+
+.Datepicker .rdtPicker table thead tr:last-child th{
+    padding-bottom: 5px;
+}
+
+.Datepicker .rdtPicker .rdtPrev span,
+.Datepicker .rdtPicker .rdtNext span{
+    text-align: center;
+}
+
+.Datepicker .rdtPicker td.rdtDisabled{
+    background-image: none;
+    color: #999999;
+}
+
+.Datepicker .rdtPicker td.rdtMonth,
+.Datepicker .rdtPicker td.rdtYear{
+    padding: 27px 0;
+    font-size: 16px;
+}
+
+.Datepicker .rdtPicker td.rdtMonth.rdtActive,
+.Datepicker .rdtPicker td.rdtYear.rdtActive{
+    border-radius: 0;
 }
 
 .Datepicker .rdtPicker th{
@@ -275,6 +301,7 @@ td.rdtYear:hover {
     background-color: #cc091d;
     color: #fff;
     border-radius: 100%;
+    height: 40px;
 }
 
 
