--- a/src/Components/Sticky/Sticky.css
+++ b/src/Components/Sticky/Sticky.css
@@ -28,3 +28,9 @@
   cursor: pointer;
   margin: 0px 5px;
 }
+
+@media(max-width: 767px), (max-device-width:767px){
+    .Sticky{
+        position: static;
+    }
+}
