--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -31,6 +31,10 @@
   font-size: 1rem;
 }
 
+.Input__field:focus + .hint{
+    display: block;
+}
+
 .Input__error {
   position: absolute;
   left: 0px;
