--- a/src/Components/Select/Select.css
+++ b/src/Components/Select/Select.css
@@ -49,6 +49,10 @@
     padding: 6px 0px 10px 0px !important;
 }
 
+.Select_country .arrow-down {
+    display: none !important;
+}
+
 .react-phone-number-input__icon{
     position: relative;
 }
