--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,12 @@ body {
 *{
     box-sizing: border-box;
 }
+html{
+    font-size: 16px !important;
+}
 
 @media (max-width:767px),(max-device-width:767px) {
     html{
-        font-size: 14px;
+        font-size: 14px !important;
     }
 }
