--- a/src/Components/Sticky/Sticky.css
+++ b/src/Components/Sticky/Sticky.css
@@ -30,7 +30,7 @@
 }
 
 .Sticky_error{
-    top: 39px;
+    top: 52px;
 }
 
 .Sticky_price{
@@ -38,10 +38,11 @@
     background-color: #fff;
     border-top: 3px solid #d89c22;
     padding-left: 46px;
-    height: 47px;
     align-items: center;
     padding-right: 10px;
     top: 0;
+    margin: 0;
+    padding: .5rem 2rem;
 }
 
 .Sticky__price-title{
@@ -49,13 +50,11 @@
     font-size: 15px;
     font-weight: 700;
     line-height: 1;
-    width: 100%;
 }
 
-.Sticky__price__total-result{
+.Sticky__price-result{
     display: flex;
     align-items: baseline;
-    width: 100%;
 }
 
 .Sticky__price__total-label{
