--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -77,6 +77,10 @@
   transform: translateY(-50%);
 }
 
+.react-phone-number-input__input{
+    border-bottom: 0px !important;
+}
+
 @media (max-width:767px),(max-device-width:767px) {
     .Input{
         width: 90%;
