--- a/src/Components/Step/Step.css
+++ b/src/Components/Step/Step.css
@@ -43,3 +43,10 @@
     border-bottom: 1px solid #cfcccc;
     border-top: 1px solid #cfcccc;
 }
+
+.Step__proceed-payment{
+    background: #f2f2f2;
+    padding: 13px 26px 13px 14px;
+    max-width: 626px;
+    font-size: .9rem;
+}
