--- a/src/Components/Sticky/Sticky.css
+++ b/src/Components/Sticky/Sticky.css
@@ -8,6 +8,7 @@
   border-top: 1px solid #cc091d;
   border-bottom: 1px solid #cc091d;
   align-items: center;
+  z-index: 1000;
 }
 
 .Sticky__error-img{
