--- a/src/Components/RadioGroup/RadioGroup.css
+++ b/src/Components/RadioGroup/RadioGroup.css
@@ -24,14 +24,20 @@
 }
 
 .RadioGroup__item-label{
-  display: inline-block;
-  user-select: none;
-  cursor: pointer;
-  font-size: 1rem;
-  padding: 0.45rem 2.25rem;
-  border: 1px solid #b0b0b0;
-  transition: 0.4s;
-  border-radius: 3px;
+    display: inline-block;
+    user-select: none;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 0.45rem 2.25rem;
+    border: 1px solid #b0b0b0;
+    transition: 0.4s;
+    border-radius: 3px;
+    padding: 0;
+    width: 8.7rem;
+    height: 47px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .RadioGroup__item-field:checked + .RadioGroup__item-label{
