--- a/src/Components/Sticky/Sticky.css
+++ b/src/Components/Sticky/Sticky.css
@@ -28,10 +28,15 @@
   text-decoration: underline;
   cursor: pointer;
   margin: 0px 5px;
+  word-break: break-word;
 }
 
 .Sticky_error{
     top: 94px;
+}
+
+.Sticky__error-content{
+    width: calc(100% - 61px);
 }
 
 .Sticky_price{
