--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,28 @@
     font-family: "Open Sans" !important;
     text-align: left;
     box-sizing: border-box !important;
+    position: relative;
 }
 
 .App__container{
     background-color: #f7f7f7;
     padding-bottom: 2rem;
+}
+
+.modal-wrap{
+    z-index: 1000000;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #00000090;
+}
+
+.modal.modal_save{
+    display: block;
+}
+
+.modal-header.modal-header_save{
+    border: 0;
 }
 
 
