--- a/src/Components/Sticky/Sticky.css
+++ b/src/Components/Sticky/Sticky.css
@@ -74,6 +74,24 @@
     font-size: 16px;
     font-weight: 700;
 }
+.modal-wrap{
+    z-index: 1000000;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #00000090;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.modal.modal_save{
+    display: block;
+}
+
+.modal-header.modal-header_save{
+    border: 0;
+}
 
 @media(max-width: 767px), (max-device-width:767px){
     .Sticky{
