--- a/src/Components/Hint/Hint.css
+++ b/src/Components/Hint/Hint.css
@@ -68,6 +68,24 @@
 	background-color: #fcd370;
 	padding: 30px;
 	display: none;
+	max-height: 400px;
+	overflow-y: auto;
+}
+.hint__body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #fcd370;
+}
+
+.hint__body::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #fcd370;
+}
+
+.hint__body::-webkit-scrollbar-thumb
+{
+	background-color: #d89c22;
 }
 
 .hint__body.active {
